Fix accidentally visible uidialog in notes (#3236)

--- a/plugins/calendar/skins/classic/calendar.css
+++ b/plugins/calendar/skins/classic/calendar.css
@@ -373,7 +373,7 @@ pre {
 	right: 4px;
 }
 
-div.uidialog {
+.calendarmain div.uidialog {
 	display: none;
 }
 
